helios-library-app/src/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>Check_Out_Allowed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Can students check books out of this location?</description>
        <inlineHelpText>Can students check books out of this location?</inlineHelpText>
        <label>Check-Out Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Young_Adults__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this location contain material for young adults? If it does, parents of children not yet in middle school (5th grade +) can opt-in to receive notifications when those children check out books in this section.</inlineHelpText>
        <label>For Young Adults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Location__c</fullName>
        <formula>Main_Location__r.Name &amp; &quot; - &quot; &amp; Name</formula>
        <label>Full Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Location</label>
        <referenceTo>Main_Location__c</referenceTo>
        <relationshipLabel>Sublocations</relationshipLabel>
        <relationshipName>Sublocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>